--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 .click {
     font-size: 13.5px;
     color: #9B9D9D;
-    margin-right: 2px;
+    margin-right: 4px;
     margin-top: 7.5px;
     height: 50%;
 }
@@ -116,6 +116,7 @@ body {
     align-items: center;
     background-color: #4a4e53;
     padding: 15px 30px;
+    border-bottom: #5B5F65 solid .5px;
 }
 .logo {
     font-size: 30px;
@@ -143,4 +144,29 @@ body {
 }
 .menu a:last-child{
     margin-right: 175px;
+}
+.gray_section{
+    width: 100%;
+    height: 630px;
+    background-color: #484D53;
+    border-top: #5B5F65 solid .5px;
+}
+.gray_text{
+    position: absolute;
+    top: 50%;
+    margin: -75px auto 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    color: white;
+    width: 500px;
+    text-align: center;
+}
+.gray_text h1{
+    font-family: "Playfair Display", serif;
+    font-size: 50px;
+    line-height: 1.2;
+}
+.gray_text p{
+    margin-top: 10px;
 }
