--- a/styles.css
+++ b/styles.css
@@ -392,3 +392,52 @@ body {
 .service-item p {
     margin-bottom: 15px;
 }
+.testimonials {
+    padding-top: 100px;
+    border-top: #919292 solid 0.5px;
+    background-color: white;
+    position: relative; 
+    padding-bottom: 100px;
+}
+.testimonials-wrapper {
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+}
+.testimonials .slick-arrow {
+    font-size: 24px; 
+    text-decoration: none; 
+    padding: 0 10px; 
+    margin: 70px;
+}
+#testimonials-slider {
+    flex-grow: 1;
+    display: flex; 
+    justify-content: center;
+    align-items: center; 
+}
+#testimonials-slider > div {
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    max-width: 700px;
+}
+#testimonials-slider blockquote {
+    font-style: italic;
+    font-size: 20px;
+    text-align: center; 
+    margin: 0; 
+    margin-bottom: 20px;
+}
+.testimonials-caption {
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    margin-top: 20px; 
+}
+.testimonials-caption img {
+    border-radius: 50%; 
+    width: 50px; 
+    height: 50px; 
+    margin-right: 10px;
+}
